plugins {
  id 'io.spring.dependency-management' version '1.1.7'
	id 'org.springframework.boot' version '3.3.12'
	id 'java'
	id 'war'
	
	
}

repositories {
	mavenCentral()
}

group = 'dev.mvc'
version = '1.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
  implementation 'org.springframework.boot:spring-boot-starter-jdbc'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  
  implementation 'com.oracle.database.jdbc:ojdbc8:21.17.0.0'
  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

  implementation 'commons-codec:commons-codec:1.16.0'
  implementation 'org.json:json:20240303'
  implementation 'commons-io:commons-io:2.16.1'
  implementation 'commons-fileupload:commons-fileupload:1.5'
  implementation 'com.sun.mail:javax.mail:1.6.2'
  implementation 'javax.activation:activation:1.1.1'
  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.1'

  implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
  implementation 'javax.servlet:javax.servlet-api:4.0.1'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  
   // 외부 라이브러리 다운로드가 필요합니다. (gradle 기준)
   implementation 'com.squareup.okhttp3:okhttp:4.9.3'
   // https://mvnrepository.com/artifact/com.squareup.okhttp/okhttp
   implementation 'com.google.code.gson:gson:2.9.0' 
   // https://github.com/google/gson
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.jsoup:jsoup:1.17.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
